--- a/后台系统/Backstage/src/components/css/index.less
+++ b/后台系统/Backstage/src/components/css/index.less
@@ -1,12 +1,42 @@
-.body{
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-}
+
 .all{
-	height: 500px;
-	width: 100%;
-	opacity: 0.2;
-	// background: red;
+	top: 0;
+	left: 0;
+	right:0;
+	bottom:0;
+	background: url(../img/all.jpg) no-repeat ;
+	position: absolute;
 }
+
+
+.Shelter{
+	width: 100%;
+	height: 100%;
+	background: blue;
+	opacity: 0.2;
+}
+
+.login{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	width: 300px;
+	height: 350px;
+	// background: blanchedalmond;
+	text-align: center;
+}
+
+.login-top{
+	width: 100%;
+	height: 50px;
+}
+
+.login-phope{
+	width: 100%;
+	height: 58px;
+	border-bottom: 1px solid #6e7680;
+}
+
+
 
